tests/files/lexer_tests/should_fail/003.cmdr
// Illegal character in string (ascii 3)
var = ''